test on ant colony algorithm + exact algorithm

--- a/src/test_by_iterations.ipynb
+++ b/src/test_by_iterations.ipynb
@@ -874,7 +874,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(\"fads\")"
+   ]
   }
  ],
  "metadata": {
