Test 2: To find best interval of every n={12,14,16,18}

--- a/src/test_on_ant_colony_algorithm_for_mtsp.ipynb
+++ b/src/test_on_ant_colony_algorithm_for_mtsp.ipynb
@@ -37,6 +37,7 @@
     }
    ],
    "source": [
+    "# Find best interval for every n ={12,14,16,18}\n",
     "import sys\n",
     "sys.path.append(\"/home/cheng/PycharmProjects/TSP/src/\")\n",
     "sys.path.append(\"/home/cheng/PycharmProjects/TSP/src/TravelingSalesmanProblem/\")\n",
@@ -139,7 +140,7 @@
     }
    ],
    "source": [
-    "# route\n",
+    "# Plot route of the optimal solution\n",
     "import pandas  as pd\n",
     "seq = 12\n",
     "dataset = 4\n",
